--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.24.0",
     "base-64": "^1.0.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "spotify-web-api-node": "^5.0.2"
   }
